// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render first selected 1`] = `
.emotion-0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -4px;
  margin-right: -4px;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-1 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid transparent;
  background: transparent;
  border-radius: 4px;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  margin-left: 4px;
  margin-right: 4px;
  color: var(--pbl-theme-colors-common-black);
  position: relative;
  padding: 8px 12px 12px;
  margin: 0 0 0px;
  white-space: nowrap;
  color: var(--pbl-theme-colors-brand-main);
  padding: 8px 12px 12px;
  margin: 0;
}

.emotion-1:enabled {
  cursor: pointer;
}

.emotion-1:disabled {
  opacity: 0.4;
  cursor: normal;
}

.emotion-1:hover {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.emotion-1:focus {
  box-shadow: 0 0 0 4px var(--pbl-theme-colors-brand-lightest);
}

.emotion-1:active {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.emotion-1:after {
  content: '';
  position: absolute;
  bottom: 0;
  left: 8px;
  width: calc(100% - 2 * 8px);
  height: 4px;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  background-color: var(--pbl-theme-colors-brand-main);
}

.emotion-2 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-button-fontSize);
  line-height: var(--pbl-theme-typography-button-lineHeight);
  margin-bottom: var(--pbl-theme-typography-button-marginBottom);
}

.emotion-3 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid transparent;
  background: transparent;
  border-radius: 4px;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  margin-left: 4px;
  margin-right: 4px;
  color: var(--pbl-theme-colors-common-black);
  position: relative;
  padding: 8px 12px 12px;
  margin: 0 0 0px;
  white-space: nowrap;
}

.emotion-3:enabled {
  cursor: pointer;
}

.emotion-3:disabled {
  opacity: 0.4;
  cursor: normal;
}

.emotion-3:hover {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.emotion-3:focus {
  box-shadow: 0 0 0 4px var(--pbl-theme-colors-brand-lightest);
}

.emotion-3:active {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.emotion-7 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid transparent;
  background: transparent;
  border-radius: 4px;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  margin-left: 8px;
  color: var(--pbl-theme-colors-common-black);
  position: relative;
  padding: 8px 12px 12px;
  margin: 0 0 0px;
  white-space: nowrap;
  opacity: 0;
  pointer-events: none;
}

.emotion-7:enabled {
  cursor: pointer;
}

.emotion-7:disabled {
  opacity: 0.4;
  cursor: normal;
}

.emotion-7:hover {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.emotion-7:focus {
  box-shadow: 0 0 0 4px var(--pbl-theme-colors-brand-lightest);
}

.emotion-7:active {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.emotion-8 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 20px;
  height: 20px;
}

.emotion-8>* {
  width: 20px;
  height: 20px;
}

.emotion-9 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid transparent;
  background: transparent;
  border-radius: 4px;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  color: var(--pbl-theme-colors-common-black);
  position: relative;
  padding: 8px 12px 12px;
  margin: 0 0 0px;
  white-space: nowrap;
}

.emotion-9:enabled {
  cursor: pointer;
}

.emotion-9:disabled {
  opacity: 0.4;
  cursor: normal;
}

.emotion-9:hover {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.emotion-9:focus {
  box-shadow: 0 0 0 4px var(--pbl-theme-colors-brand-lightest);
}

.emotion-9:active {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.emotion-11 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid transparent;
  background: transparent;
  border-radius: 4px;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  color: var(--pbl-theme-colors-common-black);
  position: relative;
  padding: 8px 12px 12px;
  margin: 0 0 0px;
  white-space: nowrap;
  color: var(--pbl-theme-colors-brand-main);
  padding: 8px 12px 12px;
  margin: 0;
}

.emotion-11:enabled {
  cursor: pointer;
}

.emotion-11:disabled {
  opacity: 0.4;
  cursor: normal;
}

.emotion-11:hover {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.emotion-11:focus {
  box-shadow: 0 0 0 4px var(--pbl-theme-colors-brand-lightest);
}

.emotion-11:active {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.emotion-11:after {
  content: '';
  position: absolute;
  bottom: 0;
  left: 8px;
  width: calc(100% - 2 * 8px);
  height: 4px;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  background-color: var(--pbl-theme-colors-brand-main);
}

<div>
  <div
    class="emotion-0"
    data-testid="pbl-tabs"
    role="tablist"
  >
    <button
      aria-selected="true"
      class="emotion-1"
      data-testid="pbl-tab"
      name="hello"
      role="tab"
    >
      <span
        class="emotion-2"
      >
        Hello
      </span>
    </button>
    <button
      aria-selected="false"
      class="emotion-3"
      data-testid="pbl-tab"
      name="world"
      role="tab"
    >
      <span
        class="emotion-2"
      >
        World
      </span>
    </button>
    <button
      aria-selected="false"
      class="emotion-3"
      data-testid="pbl-tab"
      name="bye"
      role="tab"
    >
      <span
        class="emotion-2"
      >
        Bye
      </span>
    </button>
    <button
      aria-haspopup="menu"
      aria-selected="false"
      class="emotion-7"
      data-testid="pbl-tab"
      role="tab"
    >
      <div
        class="emotion-8"
      >
        <svg
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M4.5 10.5c-.825 0-1.5.675-1.5 1.5s.675 1.5 1.5 1.5S6 12.825 6 12s-.675-1.5-1.5-1.5zm15 0c-.825 0-1.5.675-1.5 1.5s.675 1.5 1.5 1.5S21 12.825 21 12s-.675-1.5-1.5-1.5zm-7.5 0c-.825 0-1.5.675-1.5 1.5s.675 1.5 1.5 1.5 1.5-.675 1.5-1.5-.675-1.5-1.5-1.5z"
          />
        </svg>
      </div>
    </button>
  </div>
  <div
    aria-hidden="true"
    style="visibility: hidden; position: absolute;"
  >
    <button
      aria-selected="false"
      class="emotion-9"
      data-testid="pbl-tab"
      name="hello"
      role="tab"
    >
      <span
        class="emotion-2"
      >
        Hello
      </span>
    </button>
    <button
      aria-selected="true"
      class="emotion-11"
      data-testid="pbl-tab"
      name="world"
      role="tab"
    >
      <span
        class="emotion-2"
      >
        World
      </span>
    </button>
    <button
      aria-selected="false"
      class="emotion-9"
      data-testid="pbl-tab"
      name="bye"
      role="tab"
    >
      <span
        class="emotion-2"
      >
        Bye
      </span>
    </button>
  </div>
</div>
`;

exports[`Render tabs with icons 1`] = `
.emotion-0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -4px;
  margin-right: -4px;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-1 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid transparent;
  background: transparent;
  border-radius: 4px;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  margin-left: 4px;
  margin-right: 4px;
  color: var(--pbl-theme-colors-common-black);
  position: relative;
  padding: 8px 12px 12px;
  margin: 0 0 0px;
  white-space: nowrap;
}

.emotion-1:enabled {
  cursor: pointer;
}

.emotion-1:disabled {
  opacity: 0.4;
  cursor: normal;
}

.emotion-1:hover {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.emotion-1:focus {
  box-shadow: 0 0 0 4px var(--pbl-theme-colors-brand-lightest);
}

.emotion-1:active {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.emotion-2 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: 8px;
  width: 20px;
  height: 20px;
}

.emotion-2>* {
  width: 20px;
  height: 20px;
}

.emotion-3 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-button-fontSize);
  line-height: var(--pbl-theme-typography-button-lineHeight);
  margin-bottom: var(--pbl-theme-typography-button-marginBottom);
}

.emotion-4 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid transparent;
  background: transparent;
  border-radius: 4px;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  margin-left: 4px;
  margin-right: 4px;
  color: var(--pbl-theme-colors-common-black);
  position: relative;
  padding: 8px 12px 12px;
  margin: 0 0 0px;
  white-space: nowrap;
  color: var(--pbl-theme-colors-brand-main);
  padding: 8px 12px 12px;
  margin: 0;
}

.emotion-4:enabled {
  cursor: pointer;
}

.emotion-4:disabled {
  opacity: 0.4;
  cursor: normal;
}

.emotion-4:hover {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.emotion-4:focus {
  box-shadow: 0 0 0 4px var(--pbl-theme-colors-brand-lightest);
}

.emotion-4:active {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.emotion-4:after {
  content: '';
  position: absolute;
  bottom: 0;
  left: 8px;
  width: calc(100% - 2 * 8px);
  height: 4px;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  background-color: var(--pbl-theme-colors-brand-main);
}

.emotion-10 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid transparent;
  background: transparent;
  border-radius: 4px;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  margin-left: 8px;
  color: var(--pbl-theme-colors-common-black);
  position: relative;
  padding: 8px 12px 12px;
  margin: 0 0 0px;
  white-space: nowrap;
  opacity: 0;
  pointer-events: none;
}

.emotion-10:enabled {
  cursor: pointer;
}

.emotion-10:disabled {
  opacity: 0.4;
  cursor: normal;
}

.emotion-10:hover {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.emotion-10:focus {
  box-shadow: 0 0 0 4px var(--pbl-theme-colors-brand-lightest);
}

.emotion-10:active {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.emotion-11 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 20px;
  height: 20px;
}

.emotion-11>* {
  width: 20px;
  height: 20px;
}

.emotion-12 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid transparent;
  background: transparent;
  border-radius: 4px;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  color: var(--pbl-theme-colors-common-black);
  position: relative;
  padding: 8px 12px 12px;
  margin: 0 0 0px;
  white-space: nowrap;
}

.emotion-12:enabled {
  cursor: pointer;
}

.emotion-12:disabled {
  opacity: 0.4;
  cursor: normal;
}

.emotion-12:hover {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.emotion-12:focus {
  box-shadow: 0 0 0 4px var(--pbl-theme-colors-brand-lightest);
}

.emotion-12:active {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

<div>
  <div
    class="emotion-0"
    data-testid="pbl-tabs"
    role="tablist"
  >
    <button
      aria-selected="false"
      class="emotion-1"
      data-testid="pbl-tab"
      name="first"
      role="tab"
    >
      <div
        class="emotion-2"
      >
        <div
          data-testid="icon1"
        >
          icon1
        </div>
      </div>
      <span
        class="emotion-3"
      >
        First tab
      </span>
    </button>
    <button
      aria-selected="true"
      class="emotion-4"
      data-testid="pbl-tab"
      name="second"
      role="tab"
    >
      <div
        class="emotion-2"
      >
        <div
          data-testid="icon2"
        >
          icon2
        </div>
      </div>
      <span
        class="emotion-3"
      >
        Second tab
      </span>
    </button>
    <button
      aria-selected="false"
      class="emotion-1"
      data-testid="pbl-tab"
      name="third"
      role="tab"
    >
      <div
        class="emotion-2"
      >
        <div
          data-testid="icon3"
        >
          icon3
        </div>
      </div>
      <span
        class="emotion-3"
      >
        Third tab
      </span>
    </button>
    <button
      aria-haspopup="menu"
      aria-selected="false"
      class="emotion-10"
      data-testid="pbl-tab"
      role="tab"
    >
      <div
        class="emotion-11"
      >
        <svg
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M4.5 10.5c-.825 0-1.5.675-1.5 1.5s.675 1.5 1.5 1.5S6 12.825 6 12s-.675-1.5-1.5-1.5zm15 0c-.825 0-1.5.675-1.5 1.5s.675 1.5 1.5 1.5S21 12.825 21 12s-.675-1.5-1.5-1.5zm-7.5 0c-.825 0-1.5.675-1.5 1.5s.675 1.5 1.5 1.5 1.5-.675 1.5-1.5-.675-1.5-1.5-1.5z"
          />
        </svg>
      </div>
    </button>
  </div>
  <div
    aria-hidden="true"
    style="visibility: hidden; position: absolute;"
  >
    <button
      aria-selected="false"
      class="emotion-12"
      data-testid="pbl-tab"
      name="first"
      role="tab"
    >
      <div
        class="emotion-2"
      >
        <div
          data-testid="icon1"
        >
          icon1
        </div>
      </div>
      <span
        class="emotion-3"
      >
        First tab
      </span>
    </button>
    <button
      aria-selected="false"
      class="emotion-12"
      data-testid="pbl-tab"
      name="second"
      role="tab"
    >
      <div
        class="emotion-2"
      >
        <div
          data-testid="icon2"
        >
          icon2
        </div>
      </div>
      <span
        class="emotion-3"
      >
        Second tab
      </span>
    </button>
    <button
      aria-selected="false"
      class="emotion-12"
      data-testid="pbl-tab"
      name="third"
      role="tab"
    >
      <div
        class="emotion-2"
      >
        <div
          data-testid="icon3"
        >
          icon3
        </div>
      </div>
      <span
        class="emotion-3"
      >
        Third tab
      </span>
    </button>
  </div>
</div>
`;

exports[`Show "more" tab when there are too many tabs to fit the content 1`] = `
.emotion-0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -4px;
  margin-right: -4px;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-1 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid transparent;
  background: transparent;
  border-radius: 4px;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  margin-left: 4px;
  margin-right: 4px;
  color: var(--pbl-theme-colors-common-black);
  position: relative;
  padding: 8px 12px 12px;
  margin: 0 0 0px;
  white-space: nowrap;
  color: var(--pbl-theme-colors-brand-main);
  padding: 8px 12px 12px;
  margin: 0;
}

.emotion-1:enabled {
  cursor: pointer;
}

.emotion-1:disabled {
  opacity: 0.4;
  cursor: normal;
}

.emotion-1:hover {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.emotion-1:focus {
  box-shadow: 0 0 0 4px var(--pbl-theme-colors-brand-lightest);
}

.emotion-1:active {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.emotion-1:after {
  content: '';
  position: absolute;
  bottom: 0;
  left: 8px;
  width: calc(100% - 2 * 8px);
  height: 4px;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  background-color: var(--pbl-theme-colors-brand-main);
}

.emotion-2 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-button-fontSize);
  line-height: var(--pbl-theme-typography-button-lineHeight);
  margin-bottom: var(--pbl-theme-typography-button-marginBottom);
}

.emotion-3 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid transparent;
  background: transparent;
  border-radius: 4px;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  margin-left: 8px;
  color: var(--pbl-theme-colors-common-black);
  position: relative;
  padding: 8px 12px 12px;
  margin: 0 0 0px;
  white-space: nowrap;
}

.emotion-3:enabled {
  cursor: pointer;
}

.emotion-3:disabled {
  opacity: 0.4;
  cursor: normal;
}

.emotion-3:hover {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.emotion-3:focus {
  box-shadow: 0 0 0 4px var(--pbl-theme-colors-brand-lightest);
}

.emotion-3:active {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.emotion-4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 20px;
  height: 20px;
}

.emotion-4>* {
  width: 20px;
  height: 20px;
}

.emotion-5 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid transparent;
  background: transparent;
  border-radius: 4px;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  color: var(--pbl-theme-colors-common-black);
  position: relative;
  padding: 8px 12px 12px;
  margin: 0 0 0px;
  white-space: nowrap;
}

.emotion-5:enabled {
  cursor: pointer;
}

.emotion-5:disabled {
  opacity: 0.4;
  cursor: normal;
}

.emotion-5:hover {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.emotion-5:focus {
  box-shadow: 0 0 0 4px var(--pbl-theme-colors-brand-lightest);
}

.emotion-5:active {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

<div>
  <div
    class="emotion-0"
    data-testid="pbl-tabs"
    fake-width="100"
    role="tablist"
  >
    <button
      aria-selected="true"
      class="emotion-1"
      data-testid="pbl-tab"
      fake-width="50"
      name="hello"
      role="tab"
    >
      <span
        class="emotion-2"
      >
        Hello
      </span>
    </button>
    <button
      aria-haspopup="menu"
      aria-selected="false"
      class="emotion-3"
      data-testid="pbl-tab"
      fake-width="50"
      role="tab"
    >
      <div
        class="emotion-4"
      >
        <svg
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M4.5 10.5c-.825 0-1.5.675-1.5 1.5s.675 1.5 1.5 1.5S6 12.825 6 12s-.675-1.5-1.5-1.5zm15 0c-.825 0-1.5.675-1.5 1.5s.675 1.5 1.5 1.5S21 12.825 21 12s-.675-1.5-1.5-1.5zm-7.5 0c-.825 0-1.5.675-1.5 1.5s.675 1.5 1.5 1.5 1.5-.675 1.5-1.5-.675-1.5-1.5-1.5z"
          />
        </svg>
      </div>
    </button>
  </div>
  <div
    aria-hidden="true"
    style="visibility: hidden; position: absolute;"
  >
    <button
      aria-selected="false"
      class="emotion-5"
      data-testid="pbl-tab"
      fake-width="50"
      name="hello"
      role="tab"
    >
      <span
        class="emotion-2"
      >
        Hello
      </span>
    </button>
    <button
      aria-selected="false"
      class="emotion-5"
      data-testid="pbl-tab"
      fake-width="50"
      name="world"
      role="tab"
    >
      <span
        class="emotion-2"
      >
        World
      </span>
    </button>
    <button
      aria-selected="false"
      class="emotion-5"
      data-testid="pbl-tab"
      fake-width="50"
      name="hi"
      role="tab"
    >
      <span
        class="emotion-2"
      >
        Hi
      </span>
    </button>
    <button
      aria-selected="false"
      class="emotion-5"
      data-testid="pbl-tab"
      fake-width="50"
      name="earth"
      role="tab"
    >
      <span
        class="emotion-2"
      >
        Earth
      </span>
    </button>
  </div>
</div>
`;

exports[`Work with one tab 1`] = `
.emotion-0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -4px;
  margin-right: -4px;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-1 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid transparent;
  background: transparent;
  border-radius: 4px;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  margin-left: 4px;
  margin-right: 4px;
  color: var(--pbl-theme-colors-common-black);
  position: relative;
  padding: 8px 12px 12px;
  margin: 0 0 0px;
  white-space: nowrap;
  color: var(--pbl-theme-colors-brand-main);
  padding: 8px 12px 12px;
  margin: 0;
}

.emotion-1:enabled {
  cursor: pointer;
}

.emotion-1:disabled {
  opacity: 0.4;
  cursor: normal;
}

.emotion-1:hover {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.emotion-1:focus {
  box-shadow: 0 0 0 4px var(--pbl-theme-colors-brand-lightest);
}

.emotion-1:active {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.emotion-1:after {
  content: '';
  position: absolute;
  bottom: 0;
  left: 8px;
  width: calc(100% - 2 * 8px);
  height: 4px;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  background-color: var(--pbl-theme-colors-brand-main);
}

.emotion-2 {
  box-sizing: border-box;
  font-family: var(--pbl-theme-typography-base-fontFamily);
  font-style: normal;
  font-weight: var(--pbl-theme-typography-base-fontWeight);
  margin: 0;
  font-size: var(--pbl-theme-typography-button-fontSize);
  line-height: var(--pbl-theme-typography-button-lineHeight);
  margin-bottom: var(--pbl-theme-typography-button-marginBottom);
}

.emotion-3 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid transparent;
  background: transparent;
  border-radius: 4px;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  margin-left: 8px;
  color: var(--pbl-theme-colors-common-black);
  position: relative;
  padding: 8px 12px 12px;
  margin: 0 0 0px;
  white-space: nowrap;
  opacity: 0;
  pointer-events: none;
}

.emotion-3:enabled {
  cursor: pointer;
}

.emotion-3:disabled {
  opacity: 0.4;
  cursor: normal;
}

.emotion-3:hover {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.emotion-3:focus {
  box-shadow: 0 0 0 4px var(--pbl-theme-colors-brand-lightest);
}

.emotion-3:active {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.emotion-4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 20px;
  height: 20px;
}

.emotion-4>* {
  width: 20px;
  height: 20px;
}

.emotion-5 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid transparent;
  background: transparent;
  border-radius: 4px;
  -webkit-transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,-webkit-transform,0.15s;
  transition: background-color,0.3s,color 0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out,transform,0.15s;
  outline: none;
  color: var(--pbl-theme-colors-common-black);
  position: relative;
  padding: 8px 12px 12px;
  margin: 0 0 0px;
  white-space: nowrap;
}

.emotion-5:enabled {
  cursor: pointer;
}

.emotion-5:disabled {
  opacity: 0.4;
  cursor: normal;
}

.emotion-5:hover {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

.emotion-5:focus {
  box-shadow: 0 0 0 4px var(--pbl-theme-colors-brand-lightest);
}

.emotion-5:active {
  background-color: var(--pbl-theme-colors-brand-lightest);
}

<div>
  <div
    class="emotion-0"
    data-testid="pbl-tabs"
    role="tablist"
  >
    <button
      aria-selected="true"
      class="emotion-1"
      data-testid="pbl-tab"
      name="hello"
      role="tab"
    >
      <span
        class="emotion-2"
      >
        Hello
      </span>
    </button>
    <button
      aria-haspopup="menu"
      aria-selected="false"
      class="emotion-3"
      data-testid="pbl-tab"
      role="tab"
    >
      <div
        class="emotion-4"
      >
        <svg
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
          <path
            d="M4.5 10.5c-.825 0-1.5.675-1.5 1.5s.675 1.5 1.5 1.5S6 12.825 6 12s-.675-1.5-1.5-1.5zm15 0c-.825 0-1.5.675-1.5 1.5s.675 1.5 1.5 1.5S21 12.825 21 12s-.675-1.5-1.5-1.5zm-7.5 0c-.825 0-1.5.675-1.5 1.5s.675 1.5 1.5 1.5 1.5-.675 1.5-1.5-.675-1.5-1.5-1.5z"
          />
        </svg>
      </div>
    </button>
  </div>
  <div
    aria-hidden="true"
    style="visibility: hidden; position: absolute;"
  >
    <button
      aria-selected="false"
      class="emotion-5"
      data-testid="pbl-tab"
      name="hello"
      role="tab"
    >
      <span
        class="emotion-2"
      >
        Hello
      </span>
    </button>
  </div>
</div>
`;
